# savvy

./: CHANGES.md  LICENSE  README.md  dune-project  oauth2_client.opam  savvy.opam
lib/: dune  savvy.ml
src/: dune  savvy.ml  savvy.mli  savvy.mli.old
src/facebook/: dune  facebook.ml  facebook.mli
src/github/: dune  github.ml  github.mli
src/json_uri/: dune  json_uri.ml  json_uri.mli
src/oauth2_client/: dune  oauth2_client.ml  oauth2_client.mli
src/storage/: dune  storage.ml
src/utils/: dune  utils.ml
test/: dune  test_savvy.ml
